# AssignSticker

./: .gitignore  Dockerfile.build  README.MD  build.py  devmode_loader.py  download_fluenticons.py  homeworkcards.txt  index.html  introduce  main.py  previewtext  pyproject.toml  requirements.txt  settings.txt  settingsicon  widgetssettings  作业模板YML格式标准.txt
.codex/environments/: environment.toml
.github/workflows/: build.yml
data/: homework.json  settings.json
data/homework_save/: homework_20260306_224509_2637.json  homework_20260306_225017_2713.json
data/homework_save_auto/: auto_20260306_232806.json  auto_20260307_150453.json  auto_save_20260404_225735.json  auto_save_20260405_204438.json  auto_save_20260406_005742.json
desktop_widgets/: desktop_widgets.html  pyside_widget.py
homeworktemple/: custom.yml  preview.yml  workbook.yml
htmls/more/: crush_screen.html  homework_modal.html  tray_menu.html
htmls/settingspage/: about_interface.html  mainset_interface.html  settingswindow.html  styleset_interface.html  subjectset_interface.html  templateset_interface.html  update_interface.html
