[project]
name = "assignsticker"
version = "1.3.0"
description = "一款简洁，易用的作业板"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.1.1",
    "pystray>=0.19.5",
    "pywebview==4.4.1",
    "PySide6>=6.9.0",
    "plyer>=2.1.0",
]

[project.optional-dependencies]
linux = [
    "pygobject>=3.56.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
